--- a/docs/static/css/my.css
+++ b/docs/static/css/my.css
@@ -4,8 +4,45 @@
 }
 body,html {
 	width:100%;
+	text-align: center;
 }
 a {
 	text-decoration: none;
-	color:#000
+	color:#888;
+
+}
+a:hover {
+	color:#111;
+	font-weight: bold
+}
+header {
+	width:86.7%;
+	margin:0 auto;
+}
+.container {
+	display: flex;
+	width:100%;
+	flex-wrap: wrap;
+}
+header h1 {
+	margin:30px 0;
+}
+.item {
+	width:22%;
+	margin-right: 4%;
+}
+
+.item img {
+	width:100%;
+	vertical-align: middle;
+}
+.item img:hover {
+	opacity: 0.6;
+}
+.last {
+	margin-right: 0;
+}
+.title {
+	display: inline-block;
+	padding:10px 0;
 }
